--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-html{
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+html {
   width: 100svw;
-  height: 100svh;/*+++*/
-  font-family: 'Roboto', sans-serif;
+  height: 100svh; /*+++*/
+  font-family: "Roboto", sans-serif;
   overflow-x: hidden;
-
 }
 
-body{
+body {
+  font-family: "Inter", sans-serif;
   border: none;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   width: 100%;
   height: auto;
-  
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
